# parkour

./: CMakeLists.txt  parkour.sln
parkour/: CollisionSystem.cpp  Entity.cpp  LevelManagerClass.cpp  LevelManagerClass.h  Mesh.cpp  MeshRenderSystem.cpp  PhysicBody.cpp  PhysicBody.h  PhysicSystem.cpp  PhysicSystem.h  PixelShader.hlsl  PlaneCollider.cpp  PlaneCollider.h  RenderSystem.cpp  Resource.h  ScreenPixelShader.hlsl  ScreenVertexShader.hlsl  SphereCollider.cpp  SphereCollider.h  Transform.cpp  Transform.h  VertexShader.hlsl  World.cpp  applicationclass.cpp  applicationclass.h  bitmapclass.cpp  bitmapclass.h  cameraclass.cpp  d3dclass.cpp  d3dclass.h  entity.h  lightclass.cpp  lightclass.h  modelclass.cpp  modelclass.h  parkour.cpp  parkour.rc  parkour.vcxproj  parkour.vcxproj.filters  pointlight.cpp  (+17 more)
parkour/Data/Models/: Plane.txt
